tests/NormalTests/paczka2/big_fuzzy/91055568.err
Error in line 1: bU4BRvQX1 S253 95,5
Error in line 2: bU4BRvQX1 S532 47,4
Error in line 7: bU4BRvQX1 A997 54,3
Error in line 15: S532 A997 94,4
Error in line 16: Inu8bgBqIw S253 31,5
Error in line 26: Inu8bgBqIw A371 36,3
Error in line 27: Inu8bgBqIw S532 40,0
Error in line 30: Inu8bgBqIw A371 30,2
Error in line 28: e2Fq S253 79,5
Error in line 41: 8eIZk S253 22,05
Error in line 33: Inu8bgBqIw S532 60,5
Error in line 46: 8eIZk S253 15,3
Error in line 68: S532 A371 22,72
Error in line 66: Inu8bgBqIw A997 80,6
Error in line 72: Inu8bgBqIw S253 84,3
Error in line 88: c5ZcZ6PMjq A997 94,4
Error in line 89: c5ZcZ6PMjq S532 0,6
Error in line 97: kKgEPO A997 23,7
Error in line 108: Inu8bgBqIw A371 7,8
Error in line 113: kKgEPO S532 96,2
Error in line 121: e2Fq S532 28,6
Error in line 127: e2Fq S253 9,3
Error in line 128: c5ZcZ6PMjq S253 66,6
Error in line 136: Inu8bgBqIw S532 3290
Error in line 137: bU4BRvQX1 A997 -1,5
Error in line 134: S532 S253 53,1
Error in line 133: bU4BRvQX1 A997 45,7
Error in line 139: bU4BRvQX1 A371 72,3
Error in line 146: 8eIZk S253 56,1
Error in line 159: 8eIZk A997 33,8
Error in line 161: 8eIZk S253 26,0
Error in line 163: 8eIZk A371 23,3
Error in line 165: 8eIZk S532 60,5
Error in line 172: bU4BRvQX1 S253 19,6
Error in line 175: kKgEPO A371 59,5
Error in line 124: Inu8bgBqIw S532 99,7
Error in line 188: Inu8bgBqIw A997 24,5
Error in line 191: kKgEPO S253 269,1
Error in line 205: bU4BRvQX1 A997 5,30
Error in line 228: e2Fq A997 85,4
Error in line 225: 8eIZk S532 24,0
Error in line 238: S532 A997 58,7
Error in line 221: Inu8bgBqIw A371 163,8
Error in line 244: 8eIZk S253 33,6
Error in line 248: Inu8bgBqIw A997 72,5
